welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value lookingFor
	lookingFor
        ^indexOfValue:8: error: not found: value lookingFor
		if (nums(i)== lookingFor){return i}
                              ^indexOfValue:5: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- tab) {
               ^